# orion-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.tr.md  README.zh-CN.md  TODO.md  dev.bat  dev.md  dev.ps1  dev.py  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.yml  dynamic_router.py  ekstra_bilgiler.md  install.ps1  install.sh  main.py  orion.py  prod.py  pyproject.toml  run.md  stop.py
.github/workflows/: docker-publish.yml
api/: admin.py  chat.py  embeddings.py  files.py  speech.py
core/: config.py  dependencies.py  lifespan.py  security.py
dashboard/: groups.html  index.html  key-pool.html  keys.html  logs.html  model-info.html  models.html  next.config.ts  package-lock.json  package.json  playground.html  settings.html
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AppContext.tsx  DashboardLayout.tsx  PayloadViewer.tsx
dashboard/css/: base.css  components.css  layout.css  model_info.css  pages.css  style.css
dashboard/js/: api.js  app.js  keys.js  playground.js
dashboard/lib/: api.ts  format-payload.ts  i18n.ts  list-flip.ts  utils.ts
data/: model_info.json  model_pricing.json
database/: __init__.py  manager.py
dev/: copy_locales.ps1  test_db.py  translate_dashboard.py
dev/test-orion-router/: .env.example  llm-test-tools.py  run.md  test-basic-stream.py  test-basic-süreli.py  test-basic.py  test-interactive.py  (+1 more)
docs/: i18n.js  index.html  script.js  style.css
providers/: __init__.py  base.py
tools/: pgsql.ready
website/: i18n.js  index.html  script.js  style.css
(+143 files in other folders)
