[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "orion-router"
version = "0.1.0"
description = "Custom Service Router for Orion AI Assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "asyncpg>=0.29.0",
  "google-genai",
  "python-multipart>=0.0.9",
  "cryptography>=41.0.0",
]

[tool.hatch.build.targets.wheel]
include = [
  "/*.py",
  "/providers",
  "/dashboard",
]
